0.5.8 (2/16/2009)
=================

- Speed up path2 index attribute search by using __getitem__ rather
  than .get in some places.

- Override textindex reindex_doc method: calling index_doc only
  instead of calling unindex_doc and then index_doc is much more
  efficient.

0.5.7 (2/14/2009)
=================

- Attributes returned to attribute checker were not correct.

0.5.6 (2/12/2009)
=================

- Add "attribute discriminator" and "attribute checker" support to
  path2 index.  If an index is created with an attribute
  discriminator, when any object is indexed, the value of the
  attribute will be stored in the path index.  The path index will
  know that that attribute belongs to a particular path.  Later, when
  the "attribute checker" feature of the ``apply`` or ``search``
  method is used, a user-supplied attribute checker function will be
  able to filter the result set returned by the index.  This is used
  by the author primarily to support security-filtered searches of a
  path index.  It is not otherwise documented.
  
0.5.5 (2/11/2009)
=================

- Add a ``reindex_doc`` method to the catalog and to the ``common``
  shared index base class.  The catalog's ``reindex_doc`` calls each
  index's ``reindex_doc`` method when called.  The common shared index
  base class implementation unindexes the docid and then subsequently
  indexes the document using the docid.  This method can be overridden
  for specific indexes to do something different on a reindex.

- ``repoze.catalog.indexes.path2.CatalogPathIndex2`` now takes an
  extra argument to its search method named ``include_path``.  If this
  is true, the docid set returned will include the docid for the path
  specified by the path query parameter.  The ``apply`` method of the
  index allows for the specification of the ``include_path`` as a
  dictionary member in an ``apply`` call which specifies the query as
  a dictionary.
